@@ -1,7 +1,7 @@
 /*
  *
  *  Copyright [ 2020 - 2024 ] Matthew Buckton
- *  Copyright [ 2024 - 2025 ] MapsMessaging B.V.
+ *  Copyright [ 2024 - 2026 ] MapsMessaging B.V.
  *
  *  Licensed under the Apache License, Version 2.0 with the Commons Clause
  *  (the "License"); you may not use this file except in compliance with the License.
@@ -23,9 +23,10 @@ import io.mapsmessaging.auth.AuthManager;
 import io.mapsmessaging.auth.registry.GroupDetails;
 import io.mapsmessaging.auth.registry.UserDetails;
 import io.mapsmessaging.dto.rest.auth.GroupDTO;
+import io.mapsmessaging.dto.rest.auth.UserDTO;
 import io.mapsmessaging.rest.cache.CacheKey;
-import io.mapsmessaging.rest.responses.GroupListResponse;
 import io.mapsmessaging.rest.responses.StatusResponse;
+import io.mapsmessaging.security.access.Identity;
 import io.mapsmessaging.selector.ParseException;
 import io.mapsmessaging.selector.SelectorParser;
 import io.mapsmessaging.selector.operators.ParserExecutor;
@@ -33,26 +34,26 @@ import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.parameters.RequestBody;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.tags.Tag;
-import jakarta.servlet.http.HttpServletResponse;
 import jakarta.ws.rs.*;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 import static io.mapsmessaging.rest.api.Constants.URI_PATH;
 
 @Tag(name = "Authentication and Authorisation Management")
-@Path(URI_PATH)
+@Path(URI_PATH + "/auth/groups")
 public class GroupManagementApi extends BaseAuthRestApi {
 
   @GET
-  @Path("/auth/groups")
-  @Produces({MediaType.APPLICATION_JSON})
+  @Produces(MediaType.APPLICATION_JSON)
   @Operation(
       summary = "Get all groups",
       description = "Retrieves all currently known groups. Requires authentication if enabled in the configuration.",
@@ -60,239 +61,486 @@ public class GroupManagementApi extends BaseAuthRestApi {
           @ApiResponse(
               responseCode = "200",
               description = "Get all groups was successful",
-              content = @Content(mediaType = "application/json", schema = @Schema(implementation = GroupListResponse.class))
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = GroupDTO[].class))
           ),
-          @ApiResponse(responseCode = "400", description = "Bad request"),
-          @ApiResponse(responseCode = "401", description = "Invalid credentials or unauthorized access"),
-          @ApiResponse(responseCode = "403", description = "User is not authorised to access the resource"),
-
+          @ApiResponse(
+              responseCode = "400",
+              description = "Bad request",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
+          ),
+          @ApiResponse(responseCode = "401", description = "Invalid credentials or unauthorized access",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))),
+          @ApiResponse(responseCode = "403", description = "User is not authorised to access the resource",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))),
       }
   )
-  public GroupListResponse getAllGroups(
+  public Response getAllGroups(
       @Parameter(
-          description = "Optional filter string ",
-          schema = @Schema(type = "String", example = "name = 'admin'")
+          description = "Optional filter string",
+          schema = @Schema(type = "string", example = "name = 'admin'")
       )
-      @QueryParam("filter") String filter) throws ParseException {
+      @QueryParam("filter") String filter
+  ) {
+
     hasAccess(RESOURCE);
-    ParserExecutor parser = (filter != null && !filter.isEmpty()) ? SelectorParser.compile(filter) : null;
-    CacheKey key = new CacheKey(uriInfo.getPath(), (filter != null && !filter.isEmpty()) ? "" + filter.hashCode() : "");
-    GroupListResponse cachedResponse = getFromCache(key, GroupListResponse.class);
-    if (cachedResponse != null) {
-      return cachedResponse;
+
+    ParserExecutor parserExecutor;
+    try {
+      parserExecutor = (filter != null && !filter.isBlank()) ? SelectorParser.compile(filter) : null;
+    } catch (ParseException ex) {
+      return Response.status(Response.Status.BAD_REQUEST)
+          .entity(new StatusResponse("Invalid filter expression"))
+          .type(MediaType.APPLICATION_JSON)
+          .build();
     }
 
-    // Fetch groups
+    CacheKey key = new CacheKey(uriInfo.getPath(), (filter != null && !filter.isBlank()) ? Integer.toString(filter.hashCode()) : "");
+    GroupDTO[] cachedResponse = getFromCache(key, GroupDTO[].class);
+    if (cachedResponse != null) {
+      return Response.ok(cachedResponse).type(MediaType.APPLICATION_JSON).build();
+    }
+
     AuthManager authManager = AuthManager.getInstance();
     List<GroupDetails> groups = authManager.getGroups();
 
-    // Transform and filter groups
-    List<GroupDTO> results =
-        groups.stream()
-            .map(groupDetails -> new GroupDTO(groupDetails.getName(), groupDetails.getGroupId(), groupDetails.getUsers()))
-            .filter(group -> filterGroup(parser, group))
-            .collect(Collectors.toList());
+    GroupDTO[] results = groups.stream()
+        .map(this::createGroupDto)
+        .filter(groupDto -> parserExecutor == null || parserExecutor.evaluate(groupDto))
+        .toList()
+        .toArray(new GroupDTO[0]);
 
-    // Create response and cache it
-    GroupListResponse result = new GroupListResponse(request, results);
-    putToCache(key, result);
-    return result;
+    putToCache(key, results);
+    return Response.ok(results).type(MediaType.APPLICATION_JSON).build();
   }
 
   @GET
-  @Path("/auth/group/{groupUuid}")
-  @Produces({MediaType.APPLICATION_JSON})
+  @Path("/{groupUuid}")
+  @Produces(MediaType.APPLICATION_JSON)
   @Operation(
       summary = "Get group by UUID",
       description = "Retrieve the group using the UUID of the specific group. Requires authentication if enabled in the configuration.",
       responses = {
           @ApiResponse(
               responseCode = "200",
-              description = "Get groupby id was successful",
+              description = "Get group by id was successful",
               content = @Content(mediaType = "application/json", schema = @Schema(implementation = GroupDTO.class))
           ),
-          @ApiResponse(responseCode = "400", description = "Bad request"),
-          @ApiResponse(responseCode = "401", description = "Invalid credentials or unauthorized access"),
-          @ApiResponse(responseCode = "403", description = "User is not authorised to access the resource"),
-
+          @ApiResponse(
+              responseCode = "400",
+              description = "Bad request",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
+          ),
+          @ApiResponse(responseCode = "401", description = "Invalid credentials or unauthorized access",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))),
+          @ApiResponse(responseCode = "403", description = "User is not authorised to access the resource",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))),
+          @ApiResponse(
+              responseCode = "404",
+              description = "Group not found",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
+          ),
       }
   )
-  public GroupDTO getGroupById(@PathParam("groupUuid") String groupUuid) {
+  public Response getGroupById(
+      @Parameter(
+          required = true,
+          description = "Group unique identifier",
+          schema = @Schema(type = "string", format = "uuid")
+      )
+      @PathParam("groupUuid") String groupUuid) {
+
     hasAccess(RESOURCE);
 
-    // Fetch the group by UUID
-    AuthManager authManager = AuthManager.getInstance();
-    GroupDetails groupDetails =
-        authManager.getGroups().stream()
-            .filter(g -> g.getGroupId().toString().equals(groupUuid))
-            .findFirst()
-            .orElse(null);
-
-    if (groupDetails != null) {
-      return new GroupDTO(groupDetails.getName(), groupDetails.getGroupId(), groupDetails.getUsers());
+    UUID uuid;
+    try {
+      uuid = UUID.fromString(groupUuid);
+    } catch (IllegalArgumentException ex) {
+      return Response.status(Response.Status.BAD_REQUEST)
+          .entity(new StatusResponse("Invalid UUID"))
+          .type(MediaType.APPLICATION_JSON)
+          .build();
     }
 
-    // Return a 404 if the group is not found
-    throw new WebApplicationException("Group not found", Response.Status.NOT_FOUND);
+    AuthManager authManager = AuthManager.getInstance();
+    GroupDetails groupDetails = authManager.getGroups().stream()
+        .filter(group -> group.getGroupId().equals(uuid))
+        .findFirst()
+        .orElse(null);
+
+    if (groupDetails == null) {
+      return Response.status(Response.Status.NOT_FOUND)
+          .entity(new StatusResponse("Group not found"))
+          .type(MediaType.APPLICATION_JSON)
+          .build();
+    }
+
+    return Response.ok(createGroupDto(groupDetails)).type(MediaType.APPLICATION_JSON).build();
   }
 
   @POST
-  @Path("/auth/groups")
-  @Produces({MediaType.APPLICATION_JSON})
+  @Consumes(MediaType.TEXT_PLAIN)
+  @Produces(MediaType.APPLICATION_JSON)
   @Operation(
       summary = "Add new group",
       description = "Adds a new group to the group list. Requires authentication if enabled in the configuration.",
+      requestBody = @RequestBody(
+          required = true,
+          content = @Content(mediaType = "text/plain", schema = @Schema(type = "string", example = "it_group_1700000000"))
+      ),
       responses = {
           @ApiResponse(
-              responseCode = "200",
-              description = "Add group was successful",
+              responseCode = "201",
+              description = "Group created",
               content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
           ),
-          @ApiResponse(responseCode = "400", description = "Bad request"),
-          @ApiResponse(responseCode = "401", description = "Invalid credentials or unauthorized access"),
-          @ApiResponse(responseCode = "403", description = "User is not authorised to access the resource"),
-
+          @ApiResponse(
+              responseCode = "400",
+              description = "Bad request",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
+          ),
+          @ApiResponse(responseCode = "401", description = "Invalid credentials or unauthorized access",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))),
+          @ApiResponse(responseCode = "403", description = "User is not authorised to access the resource",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))),
+          @ApiResponse(
+              responseCode = "409",
+              description = "Group already exists",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
+          ),
+          @ApiResponse(
+              responseCode = "500",
+              description = "Group creation failed",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
+          )
       }
   )
-  public StatusResponse addGroup(String groupName) throws IOException {
+  public Response addGroup(String groupName) {
+
     hasAccess(RESOURCE);
-    AuthManager authManager = AuthManager.getInstance();
-    if (authManager.getGroupIdentity(groupName) == null) {
-      authManager.addGroup(groupName);
-      response.setStatus(HttpServletResponse.SC_CREATED);
-      return new StatusResponse("Successfully added group " + groupName);
+
+    if (groupName == null || groupName.isBlank()) {
+      return Response.status(Response.Status.BAD_REQUEST)
+          .entity(new StatusResponse("Group name is required"))
+          .type(MediaType.APPLICATION_JSON)
+          .build();
     }
-    response.setStatus(HttpServletResponse.SC_CONFLICT);
-    return new StatusResponse("Group " + groupName + " already exists");
+
+    AuthManager authManager = AuthManager.getInstance();
+    if (authManager.getGroupIdentity(groupName) != null) {
+      return Response.status(Response.Status.CONFLICT)
+          .entity(new StatusResponse("Group " + groupName + " already exists"))
+          .type(MediaType.APPLICATION_JSON)
+          .build();
+    }
+
+    try {
+      authManager.addGroup(groupName);
+      removeUriFromCache(URI_PATH + "/auth/groups");
+    } catch (IOException ex) {
+      return Response.status(Response.Status.INTERNAL_SERVER_ERROR)
+          .entity(new StatusResponse("Group creation failed"))
+          .type(MediaType.APPLICATION_JSON)
+          .build();
+    }
+
+    return Response.status(Response.Status.CREATED)
+        .entity(new StatusResponse("Successfully added group " + groupName))
+        .type(MediaType.APPLICATION_JSON)
+        .build();
   }
 
   @POST
-  @Path("/auth/group/{groupUuid}/{userUuid}")
-  @Produces({MediaType.APPLICATION_JSON})
+  @Path("/{groupUuid}/{userUuid}")
+  @Produces(MediaType.APPLICATION_JSON)
   @Operation(
       summary = "Add user to group",
-      description = "Adds a user to a group using the UUID of the user and UUID of the group . Requires authentication if enabled in the configuration.",
+      description = "Adds a user to a group using the UUID of the user and UUID of the group. Requires authentication if enabled in the configuration.",
       responses = {
           @ApiResponse(
               responseCode = "200",
-              description = "Add group to user was successful",
+              description = "Add user to group was successful",
               content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
           ),
-          @ApiResponse(responseCode = "400", description = "Bad request"),
-          @ApiResponse(responseCode = "401", description = "Invalid credentials or unauthorized access"),
-          @ApiResponse(responseCode = "403", description = "User is not authorised to access the resource"),
-
+          @ApiResponse(
+              responseCode = "400",
+              description = "Bad request",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
+          ),
+          @ApiResponse(responseCode = "401", description = "Invalid credentials or unauthorized access",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))),
+          @ApiResponse(responseCode = "403", description = "User is not authorised to access the resource",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))),
+          @ApiResponse(
+              responseCode = "404",
+              description = "User or group not found",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
+          ),
+          @ApiResponse(
+              responseCode = "500",
+              description = "Group membership update failed",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
+          ),
       }
   )
-  public StatusResponse addUserToGroup(
-      @PathParam("groupUuid") String groupUuid, @PathParam("userUuid") String userUuid)
-      throws IOException {
+  public Response addUserToGroup(
+      @Parameter(
+          required = true,
+          description = "Group unique identifier",
+          schema = @Schema(type = "string", format = "uuid")
+      )
+      @PathParam("groupUuid") String groupUuid,
+      @Parameter(
+          required = true,
+          description = "User unique identifier",
+          schema = @Schema(type = "string", format = "uuid")
+      )
+      @PathParam("userUuid") String userUuid
+  ) {
+
     hasAccess(RESOURCE);
-    AuthManager authManager = AuthManager.getInstance();
-    GroupDetails groupDetails =
-        authManager.getGroups().stream()
-            .filter(g -> g.getGroupId().toString().equals(groupUuid))
-            .findFirst()
-            .orElse(null);
-    if (groupDetails == null) {
-      response.setStatus(HttpServletResponse.SC_NOT_FOUND);
-      return new StatusResponse("Group " + groupUuid + " does not exist");
+
+    UUID userId;
+    UUID groupId;
+    try {
+      userId = UUID.fromString(userUuid);
+      groupId = UUID.fromString(groupUuid);
+    } catch (IllegalArgumentException ex) {
+      return Response.status(Response.Status.BAD_REQUEST)
+          .entity(new StatusResponse("Invalid UUID"))
+          .type(MediaType.APPLICATION_JSON)
+          .build();
     }
 
-    UserDetails userDetails =
-        authManager.getUsers().stream()
-            .filter(u -> u.getIdentityEntry().getId().toString().equals(userUuid))
-            .findFirst()
-            .orElse(null);
-    if (userDetails == null) {
-      response.setStatus(HttpServletResponse.SC_NOT_FOUND);
-      return new StatusResponse("User " + userUuid + " does not exist");
+    AuthManager authManager = AuthManager.getInstance();
+
+    GroupDetails groupDetails = authManager.getGroups().stream()
+        .filter(group -> group.getGroupId().equals(groupId))
+        .findFirst()
+        .orElse(null);
+
+    if (groupDetails == null) {
+      return Response.status(Response.Status.NOT_FOUND)
+          .entity(new StatusResponse("Group not found"))
+          .type(MediaType.APPLICATION_JSON)
+          .build();
     }
-    authManager.addUserToGroup(userDetails.getIdentityEntry().getUsername(), groupDetails.getName());
-    return new StatusResponse("Successfully added user " + userDetails.getIdentityEntry().getUsername() + " to group " + groupDetails.getName());
+
+    UserDetails userDetails = authManager.getUsers().stream()
+        .filter(user -> user.getIdentityEntry().getId().equals(userId))
+        .findFirst()
+        .orElse(null);
+
+    if (userDetails == null) {
+      return Response.status(Response.Status.NOT_FOUND)
+          .entity(new StatusResponse("User not found"))
+          .type(MediaType.APPLICATION_JSON)
+          .build();
+    }
+
+    try {
+      authManager.addUserToGroup(userDetails.getIdentityEntry().getUsername(), groupDetails.getName());
+    } catch (IOException ex) {
+      return Response.status(Response.Status.INTERNAL_SERVER_ERROR)
+          .entity(new StatusResponse("Group membership update failed"))
+          .type(MediaType.APPLICATION_JSON)
+          .build();
+    }
+    removeUriFromCache(URI_PATH + "/auth/groups");
+    return Response.ok(new StatusResponse(
+            "Successfully added user " + userDetails.getIdentityEntry().getUsername() + " to group " + groupDetails.getName()
+        ))
+        .type(MediaType.APPLICATION_JSON)
+        .build();
   }
 
   @DELETE
-  @Path("/auth/group/{groupUuid}/{userUuid}")
-  @Produces({MediaType.APPLICATION_JSON})
+  @Path("/{groupUuid}/{userUuid}")
+  @Produces(MediaType.APPLICATION_JSON)
   @Operation(
       summary = "Removes a user from group",
-      description = "Removes a user from a group using the users UUID and the groups UUID . Requires authentication if enabled in the configuration.",
+      description = "Removes a user from a group using the users UUID and the groups UUID. Requires authentication if enabled in the configuration.",
       responses = {
           @ApiResponse(
               responseCode = "200",
               description = "Remove user from group was successful",
               content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
           ),
-          @ApiResponse(responseCode = "400", description = "Bad request"),
-          @ApiResponse(responseCode = "401", description = "Invalid credentials or unauthorized access"),
-          @ApiResponse(responseCode = "403", description = "User is not authorised to access the resource"),
-
+          @ApiResponse(
+              responseCode = "400",
+              description = "Bad request",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
+          ),
+          @ApiResponse(responseCode = "401", description = "Invalid credentials or unauthorized access",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))),
+          @ApiResponse(responseCode = "403", description = "User is not authorised to access the resource",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))),
+          @ApiResponse(
+              responseCode = "404",
+              description = "User or group not found",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
+          ),
+          @ApiResponse(
+              responseCode = "500",
+              description = "Group membership update failed",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
+          ),
       }
   )
-  public StatusResponse removeUserFromGroup(
-      @PathParam("groupUuid") String groupUuid, @PathParam("userUuid") String userUuid)
-      throws IOException {
+  public Response removeUserFromGroup(
+      @Parameter(
+          required = true,
+          description = "Group unique identifier",
+          schema = @Schema(type = "string", format = "uuid")
+      )
+      @PathParam("groupUuid") String groupUuid,
+      @Parameter(
+          required = true,
+          description = "User unique identifier",
+          schema = @Schema(type = "string", format = "uuid")
+      )
+      @PathParam("userUuid") String userUuid
+  ) {
+
     hasAccess(RESOURCE);
+
+    UUID userId;
+    UUID groupId;
+    try {
+      userId = UUID.fromString(userUuid);
+      groupId = UUID.fromString(groupUuid);
+    } catch (IllegalArgumentException ex) {
+      return Response.status(Response.Status.BAD_REQUEST)
+          .entity(new StatusResponse("Invalid UUID"))
+          .type(MediaType.APPLICATION_JSON)
+          .build();
+    }
+
     AuthManager authManager = AuthManager.getInstance();
-    GroupDetails groupDetails =
-        authManager.getGroups().stream()
-            .filter(g -> g.getGroupId().toString().equals(groupUuid))
-            .findFirst()
-            .orElse(null);
+
+    GroupDetails groupDetails = authManager.getGroups().stream()
+        .filter(group -> group.getGroupId().equals(groupId))
+        .findFirst()
+        .orElse(null);
+
     if (groupDetails == null) {
-      response.setStatus(HttpServletResponse.SC_NOT_FOUND);
-      return new StatusResponse("Group " + groupUuid + " does not exist");
+      return Response.status(Response.Status.NOT_FOUND)
+          .entity(new StatusResponse("Group not found"))
+          .type(MediaType.APPLICATION_JSON)
+          .build();
     }
-    UserDetails userDetails =
-        authManager.getUsers().stream()
-            .filter(u -> u.getIdentityEntry().getId().toString().equals(userUuid))
-            .findFirst()
-            .orElse(null);
+
+    UserDetails userDetails = authManager.getUsers().stream()
+        .filter(user -> user.getIdentityEntry().getId().equals(userId))
+        .findFirst()
+        .orElse(null);
+
     if (userDetails == null) {
-      response.setStatus(HttpServletResponse.SC_NOT_FOUND);
-      return new StatusResponse("User " + userUuid + " does not exist");
+      return Response.status(Response.Status.NOT_FOUND)
+          .entity(new StatusResponse("User not found"))
+          .type(MediaType.APPLICATION_JSON)
+          .build();
     }
-    authManager.removeUserFromGroup(userDetails.getIdentityEntry().getUsername(), groupDetails.getName());
-    return new StatusResponse("User " + userDetails.getIdentityEntry().getUsername() + " removed from group " + groupDetails.getName());
+
+    try {
+      authManager.removeUserFromGroup(userDetails.getIdentityEntry().getUsername(), groupDetails.getName());
+    } catch (IOException ex) {
+      return Response.status(Response.Status.INTERNAL_SERVER_ERROR)
+          .entity(new StatusResponse("Group membership update failed"))
+          .type(MediaType.APPLICATION_JSON)
+          .build();
+    }
+    removeUriFromCache(URI_PATH + "/auth/groups");
+
+    return Response.ok(new StatusResponse(
+            "User " + userDetails.getIdentityEntry().getUsername() + " removed from group " + groupDetails.getName()
+        ))
+        .type(MediaType.APPLICATION_JSON)
+        .build();
   }
 
   @DELETE
-  @Path("/auth/group/{groupUuid}")
-  @Produces({MediaType.APPLICATION_JSON})
+  @Path("/{groupUuid}")
+  @Produces(MediaType.APPLICATION_JSON)
   @Operation(
       summary = "Delete a group",
       description = "Deletes a group from the list and removes all user memberships. Requires authentication if enabled in the configuration.",
       responses = {
+          @ApiResponse(responseCode = "204", description = "Group deleted"),
           @ApiResponse(
-              responseCode = "200",
-              description = "Delete group was successful",
+              responseCode = "400",
+              description = "Bad request",
               content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
           ),
-          @ApiResponse(responseCode = "400", description = "Bad request"),
-          @ApiResponse(responseCode = "401", description = "Invalid credentials or unauthorized access"),
-          @ApiResponse(responseCode = "403", description = "User is not authorised to access the resource"),
-
+          @ApiResponse(responseCode = "401", description = "Invalid credentials or unauthorized access",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))),
+          @ApiResponse(responseCode = "403", description = "User is not authorised to access the resource",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))),
+          @ApiResponse(
+              responseCode = "404",
+              description = "Group not found",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
+          ),
+          @ApiResponse(
+              responseCode = "500",
+              description = "Group deletion failed",
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
+          ),
       }
   )
-  public StatusResponse deleteGroup(@PathParam("groupUuid") String groupUuid) throws IOException {
+  public Response deleteGroup(
+      @Parameter(
+          required = true,
+          description = "Group unique identifier",
+          schema = @Schema(type = "string", format = "uuid")
+      )
+      @PathParam("groupUuid") String groupUuid) {
+
     hasAccess(RESOURCE);
-    AuthManager authManager = AuthManager.getInstance();
-    GroupDetails groupDetails =
-        authManager.getGroups().stream()
-            .filter(g -> g.getGroupId().toString().equals(groupUuid))
-            .findFirst()
-            .orElse(null);
-    if (groupDetails != null) {
-      authManager.delGroup(groupDetails.getName());
-      return new StatusResponse("Successfully deleted group " + groupDetails.getName());
+
+    UUID groupId;
+    try {
+      groupId = UUID.fromString(groupUuid);
+    } catch (IllegalArgumentException ex) {
+      return Response.status(Response.Status.BAD_REQUEST)
+          .entity(new StatusResponse("Invalid UUID"))
+          .type(MediaType.APPLICATION_JSON)
+          .build();
     }
-    response.setStatus(HttpServletResponse.SC_NOT_FOUND);
-    return new StatusResponse("Failed to delete group " + groupDetails.getName());
+
+    AuthManager authManager = AuthManager.getInstance();
+    GroupDetails groupDetails = authManager.getGroups().stream()
+        .filter(group -> group.getGroupId().equals(groupId))
+        .findFirst()
+        .orElse(null);
+
+    if (groupDetails == null) {
+      return Response.status(Response.Status.NOT_FOUND)
+          .entity(new StatusResponse("Group not found"))
+          .type(MediaType.APPLICATION_JSON)
+          .build();
+    }
+
+    try {
+      authManager.delGroup(groupDetails.getName());
+    } catch (IOException ex) {
+      return Response.status(Response.Status.INTERNAL_SERVER_ERROR)
+          .entity(new StatusResponse("Group deletion failed"))
+          .type(MediaType.APPLICATION_JSON)
+          .build();
+    }
+    removeUriFromCache(URI_PATH + "/auth/groups");
+
+    return Response.noContent().build();
   }
 
-  // Helper methods
-  private boolean filterGroup(ParserExecutor parser, GroupDTO group) {
-    return parser == null || parser.evaluate(group);
+  private GroupDTO createGroupDto(GroupDetails groupDetails) {
+    List<UserDTO> userList = new ArrayList<>();
+    for (UUID userId : groupDetails.getUsers()) {
+      Identity identity = AuthManager.getInstance().getUserIdentity(userId);
+      if (identity != null) {
+        userList.add(new UserDTO(identity.getUsername(), identity.getId(), null, null));
+      }
+    }
+    return new GroupDTO(groupDetails.getName(), groupDetails.getGroupId(), userList.toArray(new UserDTO[0]));
   }
 }
